Registration fixed. Form box spill fixed.

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -20,13 +20,16 @@ form {
 
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
+    box-sizing: border-box;
 }
 
 .form-group {
     margin-bottom: 15px;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 label {
